discussion/kv_engine/186957/186957_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54810: Include overflow samples in cbstats histograms

Make use of the newly-added overflow metrics in timing histograms to
show the numbera of samples which exceeded the representable range of
the histogram when outputting histograms via cbstats.

Example output from cbstate timings, with 1000 "overflowed" samples
synthesized:

    $ ./cbstats localhost:12000 -u Administrator -p asdasd runtimes
     WorkLoadMonitor[NonIO] (14211 total)
           0us -    0us : (  3.4365%)  454 ████████████
           0us -    1us : ( 45.7876%) 5595 ████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▊
           1us -    1us : ( 45.7876%)    0
           1us -    2us : ( 50.9954%)  688 ██████████████████▎
           2us -    3us : ( 71.5616%) 2717 ████████████████████████████████████████████████████████████████████████▎
           3us -    3us : ( 71.5616%)    0
           3us -    4us : ( 95.8595%) 3210 █████████████████████████████████████████████████████████████████████████████████████▍
           4us -    4us : ( 95.8595%)    0
           4us -    5us : ( 99.2506%)  448 ███████████▉
...
         575us -  671us : (100.0000%)    1
          60s - inf     : (overflow ) 1000 ██████████████████████████▌
        Avg             : (    3us)

Note the additon of the final 'overflowed' bucket, which reports the
highest trackable value (60s) to Infinity as the range of this bucket.

Also note that the percentiles are calculated based on the buckets
that the histogram, *excluding* any overflow. In other words, "100%"
of the samples based on the information the histogram has correctly
bucketed.

This behaviour might be surprising (why not include overflowed in
percentiles, given we have it now?), but the reason for this is to
maintain consistent percentile iteration - i.e. a given Histogram
should have buckets at p50, p75, p90, etc. If we re-calculated
percentiles to include the overflow (which the underlying histogram
library which performs the iteration has no knowledge of), then the
reported percentiles would change and this property would be lost.

Change-Id: I827d82aa7272d2b464e3993cea514dce5363233a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2023-02-17 10:58:20.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-17 10:58:54.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/338558/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-17 11:47:25.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1194/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/statistics/cbstat_collector.cc:131:54: error: no member named "getOverflowCount" in "HdrHistogram" [clang-diagnostic-error]
        histData.sampleCount = v.getValueCount() + v.getOverflowCount();
                                                     ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1194/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/statistics/cbstat_collector.cc:131:54:
error: no member named "getOverflowCount" in "HdrHistogram" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1194/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1435/ : FAILURE

Compile error at ..\kv_engine\statistics\cbstat_collector.cc(131): error C2039: "getOverflowCount": is not a member of "HdrHistogram" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1435/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1156/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/statistics/prometheus_collector.cc:57:50:
error: no member named "getOverflowCount" in "HdrHistogram"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1156/ )

CMake error: CMakeLists.txt:145 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1156/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1221/ : FAILURE

Compile error at [2023-02-17T11:26:26.912Z] ../kv_engine/statistics/cbstat_collector.cc:131:54:
error: ?const class HdrHistogram? has no member named ?getOverflowCount?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1221/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1223/ : FAILURE

Compile error at [2023-02-17T11:23:21.136Z] ../kv_engine/statistics/cbstat_collector.cc:131:54:
error: ?const class HdrHistogram? has no member named ?getOverflowCount?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1223/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1219/ : FAILURE

Compile error at [2023-02-17T11:47:07.556Z] ../kv_engine/statistics/cbstat_collector.cc:131:54:
error: no member named "getOverflowCount" in "HdrHistogram"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1219/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1551/ : FAILURE

Compile error at [2023-02-17T11:36:52.262Z] ../kv_engine/statistics/cbstat_collector.cc:131:54:
error: no member named "getOverflowCount" in "HdrHistogram"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1551/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1213/ : FAILURE

Compile error at [2023-02-17T11:33:50.860Z] ../kv_engine/statistics/cbstat_collector.cc:131:54:
error: no member named "getOverflowCount" in "HdrHistogram"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1213/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1185/ : FAILURE

Compile error at [2023-02-17T11:15:03.634Z] ../kv_engine/statistics/cbstat_collector.cc:131:54:
error: no member named "getOverflowCount" in "HdrHistogram"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1185/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1211/ : FAILURE

Compile error at [2023-02-17T11:41:03.651Z] ../kv_engine/statistics/cbstat_collector.cc:131:54:
error: ?const class HdrHistogram? has no member named ?getOverflowCount?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1211/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22805/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
